Version 1.0RC4-CVS (?? ??? 2005)
 - Undo bug fix 1120897: Conflict with exceptions. This patch caused conflicts 
   on other days which turns out to be a more severe problem.
 - Fixed bug 1193835: Creator cannot "edit" a nonuser-event after Admin changes it.
 - Fixed bug 1193579: Untimed shows up wrong in edit page
 - Fixed several undefined variable messages with Repeat events in
   import_palmdesktop.php. Limited delete_palm_events() to only palm type imports
 - Fixed undefined variable notice in import_handler.php
 - Fixed bug 1189515: Possible to create blank usernames
 - Fixed bug 1190687: users.php called as public
 - Fixed bug 1190699: export.php available to public
 - Fixed bug 1190704: public can access assistant_edit.php
 - Fixed bug 1103215: Invalid work hours
 - Split import/export back to two separate links & pages
 - Moved contents of scheduling tab to details tab
 - Fixed bug 1187734: Timezone offset problem
 - Fixed bug 1120897: Conflict with exceptions
 - Moved function add_duration() to functions.php
 - Fixed problem with ical import weekly BYDAY parsing in import_ical.php
 - Fixed bug 1181682: Report with no name entered -> phantom report!
 - Fixed bug 1179423: private events displayed on reports
 - Fixed bug 1183714: Translation error
 - Fixed bug 1154432: vCal import from Mozilla fails to translate quoted-printable
 - Don't import events if they have in invalid start time (Fixed bug 1176164)
 - When viewing a report, if allow_html_description is enabled but no HTML
   is found in an event description, use nl2br to preserve plain text
   formatting.
 - Fixed bug 1181682: Reports with just spaces for a name cannot be edited.
 - Fixed bug 1179403: Availability selection fails when Time Format =24
 - Added sql to set webcal_config STARTVIEW default to week.php for 
   upgrade from v1.0RC2 to v1.0RC3.
 - Fixed problem with missing $cat_id in week and day URLs in month.php
 - Fixed bug 1065461: timezone offset & all-day events