@@ -1,4 +1,5 @@
 Version 1.0RC4-CVS (?? ??? 2005)
+ - Fixed bug 1201821: Bypass user_sees_only_his_groups
  - Undo bug fix 1120897: Conflict with exceptions. This patch caused conflicts 
    on other days which turns out to be a more severe problem.
  - Fixed bug 1193835: Creator cannot "edit" a nonuser-event after Admin changes it.
